--- a/css/reset.css
+++ b/css/reset.css
@@ -3,19 +3,16 @@
 * ::after {
     box-sizing: border-box;
     font: inherit;
-    line-height: calc(1em + 0.5rem);
+    /* line-height: calc(1em + 0.5rem); */
     margin: 0;
     padding: 0;
-}
-
-body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    min-height: 100svh;
 }
 
 html {
     color-scheme: dark light;
     hanging-punctuation: first last;
+    interpolate-size: allow-keywords;
+    transition-behavior: allow-discrete;
 }
 
 img,
