--- a/css/scene.css
+++ b/css/scene.css
@@ -1,99 +1,182 @@
 /* TODO */
 /* 
-- optimize '*-pos' transitions
-- recreate compositions with '*-pos' instead of depth
-- simplify colors
-- simplify gradients
+x optimize '*-pos' transitions
+x recreate compositions with '*-pos' instead of depth
+x simplify colors
+x simplify gradients
+- create new inital state
 */
-
-
-/* ========================================================================== */
-/* # Props for transitions */
-/* ========================================================================== */
-
-@property --ascender-pos { initial-value: 0; inherits: false; syntax: '<number>'; } /* transition transform directly */
-@property --stem-pos { initial-value: 0; inherits: false; syntax: '<number>'; } /* transition transform directly */
-@property --arm-pos { initial-value: 0; inherits: false; syntax: '<number>'; } /* transition transform directly */
-@property --leg-pos { initial-value: 0; inherits: false; syntax: '<number>'; } /* transition transform directly */
 
 /* ========================================================================== */
 /* # Transition timing config */
 /* ========================================================================== */
 
 :root {
-  --orientation-duration: 0.75s;
-  --orientation-easing: ease-in-out;
-  --depth-mod-duration: 1.25s;
-  --zoom-duration: 1s;
+  --transition-duration: 1.25s;
+  --transition-easing: ease-in-out;
 }
 
 /* ========================================================================== */
 /* # Homepage navigation states */
 /* ========================================================================== */
 
+/* ## Initial state
+/* ========================================================================== */
+#background-scene {
+  perspective: 50em;
+  & > #k0v1 {
+    transform:
+      var(--_v-center-composition)
+      scale3d(3, 3, 3)
+    ;
+  }
+}
+
+/* ## Design
+/* ========================================================================== */
 body:has(details[name="nav"][id="design"][open]) #background-scene {
+  perspective: 100em; /* lower value makes the composition undesirable */
   & > #k0v1 {
     transform:
       rotateY(225deg)
       rotateX(0)
-      translateY(-0.22em)
-      /* scale3d(1.875, 1.875, 1.875) */
-      scale3d(0.5, 0.5, 0.5)
+      translateY(-0.65em)
+      scale3d(1.5, 1.5, 1.5)
     ;
+    & > #ascender {
+      transform:
+        translate(-0.707em, -0.707em)
+        rotateZ(45deg)
+        translateZ(-0.25em) /* always changes */
+      ;
+    }
+    & > #arm {
+      transform:
+      rotateZ(-45deg)
+      translateZ(0.75em) /* always changes */
+    ;
+    }
+    & > #stem {
+      transform:
+        translate(-1.15em, 1.15em)
+        rotateZ(-135deg)
+        translateZ(-0.5em) /* always changes */
+      ;
+    }
+    & > #leg {
+      transform:
+        translate(0.5em, calc(1.205em))
+        rotateZ(0deg)
+        translateZ(-0.36em) /* always changes */
+      ;
+    }
   }
 }
 
+/* ## Music
+/* ========================================================================== */
 body:has(details[name="nav"][id="music"][open]) #background-scene {
+  perspective: 5em; /* smaller value results in rough transition from '100em' at '## Art' */
   & > #k0v1 {
     transform:
       rotateY(45deg)
       rotateX(45deg)
-      translateY(-0.22em)
-      /* scale3d(1.5, 1.5, 1.5) */
-      scale3d(0.5, 0.5, 0.5)
+      translateY(0em)
+      scale3d(0.75, 0.75, 0.75)
     ;
+    & > #ascender {
+      transform:
+        translate(-0.707em, -0.707em)
+        rotateZ(45deg)
+        translateZ(0.75em) /* always changes */
+      ;
+    }
+    & > #arm {
+      transform:
+        rotateZ(-45deg)
+        translateZ(0.25em) /* always changes */
+      ;
+    }
+    & > #stem {
+      transform:
+        translate(-1.15em, 1.15em)
+        rotateZ(-135deg)
+        translateZ(-0.75em)  /* always changes */
+      ;
+    }
+    & > #leg {
+      transform:
+        translate(0.5em, calc(1.205em))
+        rotateZ(0deg)
+        translateZ(-0.25em) /* always changes */
+      ;
+    }
   }
 }
 
+/* ## Art
+/* ========================================================================== */
 body:has(details[name="nav"][id="art"][open]) #background-scene {
+  perspective: 5em; /* smaller value results in rough transition from '100em' at '[id="art"]' */
   & > #k0v1 {
     transform:
       rotateY(-135.5deg)
       rotateX(81deg)
-      translateY(-0.22em)
-      /* scale3d(1.5, 1.5, 1.5) */
-      scale3d(0.5, 0.5, 0.5)
+      var(--_v-center-composition)
+      scale3d(1.5, 1.5, 1.5)
     ;
+    & > #ascender {
+      transform:
+        translate(-0.707em, -0.707em)
+        rotateZ(45deg)
+        translateZ(0em) /* always changes */
+      ;
+    }
+    & > #arm {
+      transform:
+        rotateZ(-45deg)
+        translateZ(-0.75em) /* always changes */
+      ;
+    }
+    & > #stem {
+      transform:
+        translate(-1.15em, 1.15em)
+        rotateZ(-135deg)
+        translateZ(0.75em) /* always changes */
+      ;
+    }
+    & > #leg {
+      transform:
+        translate(0.5em, calc(1.205em))
+        rotateZ(0deg)
+        translateZ(-0.25em) /* always changes */
+      ;
+    }
   }
-
-  --leg-pos: -0.25;
-  --arm-pos: -1;
-  --stem-pos: 0.25;
-  --ascender-pos: 0.25;
 }
 
+/* ## About
+/* ========================================================================== */
 body:has(details[name="nav"][id="about"][open]) #background-scene {
+  perspective: 5em; /* smaller value results in rough transition from '100em' at '[id="art"]' */
   & > #k0v1 {
     transform:
       rotateY(-45deg)
       rotateX(0)
-      translateY(-0.22em)
+      var(--_v-center-composition)
+      translateX(0.25em)
       scale3d(0.75, 0.75, 0.75)
     ;
+    & > * > .front {
+      opacity: 1;
+    }
   }
 }
 
 /* ========================================================================== */
-/* # Background */
+/* # Background scene */
 /* ========================================================================== */
 #background-scene {
-/* ## Input
-/* ========================================================================== */
-  --_ascender-pos: calc(1em * var(--ascender-pos));
-  --_stem-pos: calc(1em * var(--stem-pos));
-  --_arm-pos: calc(1em * var(--arm-pos));
-  --_leg-pos: calc(1em * var(--leg-pos));
-
 /* ## Config
 /* ========================================================================== */
   --_unit: min(35vh, 35vw); /* This equals '1em'. */
@@ -103,15 +186,10 @@ body:has(details[name="nav"][id="about"][open]) #background-scene {
   --_background-color: var(--color-background);
   --_foreground-color: var(--color-foreground);
 
-  --_front-color: hsl(from var(--_foreground-color) h s l / 0.75);
-  --_sides-gradient-100: linear-gradient(90deg, hsl(from var(--_foreground-color) h s l / 0.250), 25%, hsl(from var(--_background-color) h s l / 0));
-  --_sides-gradient-200: linear-gradient(90deg, hsl(from var(--_foreground-color) h s l / 0.375), 25%, hsl(from var(--_background-color) h s l / 0));
-  --_sides-gradient-300: linear-gradient(90deg, hsl(from var(--_foreground-color) h s l / 0.500), 25%, hsl(from var(--_background-color) h s l / 0));
-  --_sides-gradient-400: linear-gradient(90deg, hsl(from var(--_foreground-color) h s l / 0.625), 25%, hsl(from var(--_background-color) h s l / 0));
-
-/* ## Utility
+/* ## Utilities
 /* ========================================================================== */
   --_center-face: translate(-50%, -50%);
+  --_v-center-composition: translateY(-0.22em);
 
 /* ## Actual properties
 /* ========================================================================== */
@@ -121,16 +199,20 @@ body:has(details[name="nav"][id="about"][open]) #background-scene {
   min-height: var(--_scene-height);
   min-width: var(--_scene-width);
   overflow: hidden;
-  perspective: 50em;
   perspective-origin: 50% 50%;
   position: relative;
-/*   transition:
-    --ascender-pos var(--depth-mod-duration) ease,
-    --stem-pos var(--depth-mod-duration) ease,
-    --arm-pos var(--depth-mod-duration) ease,
-    --leg-pos var(--depth-mod-duration) ease
-  ; */
+  transition: perspective var(--transition-duration) var(--transition-easing);
   z-index: -1; /* under homepage navigation */
+  & > #k0v1 {
+    transform-style: preserve-3d;
+    transition: transform var(--transition-duration) var(--transition-easing);
+    & > :is(#ascender, #stem, #arm, #leg) {
+      transition: transform var(--transition-duration) var(--transition-easing);
+      & >  .front {
+        transition: opacity var(--transition-duration) var(--transition-easing);
+      }
+    }
+  }
 }
 
 #background-scene * {
@@ -139,104 +221,89 @@ body:has(details[name="nav"][id="about"][open]) #background-scene {
   left: 50%;
 }
 
-/* ## Logo
-/* ========================================================================== */
-/* Camera rotation and vertical centering */
-#k0v1 {
-  transform:
-    rotateY(calc(var(--_rotate-y) * 360deg))
-    rotateX(calc(var(--_rotate-x) * 360deg))
-    translateY(-0.22em)
-    scale3d(3, 3, 3)
-  ;
-  transform-style: preserve-3d;
-  transition: transform var(--orientation-duration) var(--orientation-easing);
-}
-
 /* Matching coordinate systems */
 .center { transform: var(--_center-face); }
 .center, .center > * { transform-style: preserve-3d; }
 
 /* ## Assembly
 /* ========================================================================== */
-.front {
-  background: var(--_front-color);
-  clip-path: polygon(0 0, 100% 100%, 0 100%);
+/*
+  - Both the ascender, arm, leg, and stem are instances of the same triangular prism.
+  - Only the front and the three sides are used.
+*/
+/* Common face properties */
+.front, .side-01, .side-02, .side-03 {
+  background: linear-gradient(90deg, var(--_foreground-color), 25%, var(--_background-color)); /* overriden at '.front' */
   width: 1em;
-  height: 1em;
+  height: 1em; /* overriden at '.side-03' */
+}
+
+/* Constructing the prisms */
+.front {
+  background: var(--_foreground-color);
+  opacity: 0.55;
+  clip-path: polygon(0 0, 100% 100%, 0 100%);
   transform:
     var(--_center-face)
-    translateZ(0.5em);
+    translateZ(0.5em)
+  ;
 }
 
 .side-01 {
-  width: 1em;
-  height: 1em;
+  opacity: 0.40;
   transform:
     var(--_center-face)
     translate(-0.5em, 0)
     rotateY(-90deg)
-    rotateZ(180deg);
+    rotateZ(180deg)
+  ;
 }
 
 .side-02 {
-  width: 1em;
-  height: 1em;
+  opacity: 0.25;
   transform:
     var(--_center-face)
     translate(0, 0.5em)
     rotateY(90deg)
-    rotateX(-90deg);
+    rotateX(-90deg)
+  ;
 }
 
 .side-03 {
-  width: 1em;
   height: 1.414em;
+  opacity: 0.10;
   transform:
     var(--_center-face)
     rotateZ(45deg)
     rotateY(90deg)
-    rotateX(90deg);
+    rotateX(90deg)
+  ;
 }
 
+/* Positioning the prism instances */
 #ascender {
   transform:
-  translate(-0.707em, -0.707em)
-  rotateZ(45deg)
-  translateZ(var(--_ascender-pos));
-
-  .side-01 { background: var(--_sides-gradient-100); }
-  .side-02 { background: var(--_sides-gradient-300); }
-  .side-03 { background: var(--_sides-gradient-200); }
+    translate(-0.707em, -0.707em)
+    rotateZ(45deg)
+  ;
 }
 
 #arm {
   transform:
     rotateZ(-45deg)
-    translateZ(var(--_arm-pos));
-
-  .side-01 { background: var(--_sides-gradient-300); }
-  .side-02 { background: var(--_sides-gradient-200); }
-  .side-03 { background: var(--_sides-gradient-100); }
+  ;
 }
 
 #stem {
   transform:
     translate(-1.15em, 1.15em)
     rotateZ(-135deg)
-    translateZ(var(--_stem-pos));
-
-  .side-01 { background: var(--_sides-gradient-300); }
-  .side-02 { background: var(--_sides-gradient-100); }
-  .side-03 { background: var(--_sides-gradient-200); }
+  ;
 }
 
 #leg {
   transform:
     translate(0.5em, calc(1.205em))
-    rotateZ(0deg) translateZ(var(--_leg-pos));
-
-  .side-01 { background: var(--_sides-gradient-100); }
-  .side-02 { background: var(--_sides-gradient-200); }
-  .side-03 { background: var(--_sides-gradient-400); }
+    rotateZ(0deg)
+  ;
 }
