--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,13 @@
 - linking content
 X general cleanup and comments pls
 - adjust font-sizes
+  - Archivo -> Anybody (responsive width), Tilt Warp (rotate "with" background scene)?
 - create consistent spacing
 - block margin on the open detail?
 - fill on the open detail's summary?
 - anyways, something's off with the hierarchy there
 - transition timing system
+- move transitions under a media query
 X polish the transitions of the '+' icons
 */
 
@@ -56,7 +58,6 @@ body {
   color: var(--color-text);
   font-family: var(--font-family-sans);
   font-size: var(--font-size-mid);
-  line-height: 1.3;
   min-height: 100svh;
 
   &:has(#background-scene) {
@@ -74,15 +75,6 @@ body {
 nav {
   grid-area: background-scene; /* on top of '#background-scene' */
   padding: var(--spacing-min);
-
-/*   &:has(details[name="nav"]) {
-    backdrop-filter: blur(32px);
-    transition: backdrop-filter 0.75s ease-out;
-  } */
-
-/*   &:has(details[name="nav"][open]) {
-    backdrop-filter: blur(0px);
-  } */
 }
 
 details[name="nav"] {
@@ -170,7 +162,9 @@ details[name="nav"] {
 
   ul {
     display: flex;
-    gap: 1rem;
+    flex-wrap: wrap;
+    gap: 0.75rem;
+    line-height: 0.75;
     list-style-type: none;
     padding: var(--spacing-min);
   }
